--- a/fundooApp/css/styl.css
+++ b/fundooApp/css/styl.css
@@ -189,15 +189,15 @@
 {
     margin-left: -360px;
     width: 350px;
-    background: #fff;
+    /* background: #fff;
     border: 1px solid;
     border-color: rgba(0,0,0,.2);
     color: #000;
-    box-shadow: 0 2px 10px rgba(0,0,0,.2);
-    overflow: hidden;
+    box-shadow: 0 2px 10px rgba(0,0,0,.2); */
+
     position: absolute;
     right: 8px;
-    top: 62px;
+    top: 58px;
     border-radius: 2px;
 
 }
