--- a/fundooApp/templates/navbar.html
+++ b/fundooApp/templates/navbar.html
@@ -1,3 +1,4 @@
+<div >
 <md-toolbar  class="md-toolbar-tools"  style="background-color:#fb0; position:fixed;">
 
   <md-button class="md-icon-button"  ng-click="toggleLeft()" >
@@ -38,36 +39,32 @@
      <md-tooltip>Notification</md-tooltip>
    </md-button>
 
-   <md-button class="md-icon-button" ng-click="logOut()" >
+   <md-button class="md-icon-button" ng-click="clickProfile()" >
    <img src="images/baby.jpg" style="width:30px;height:28px; border-radius: 76px;"/><md-tooltip>account circle</md-tooltip>
  </md-button>
  </md-toolbar>
-
-
-
- <a  href="" 3+ng-click="clickProfile()" ><img src="images/baby.jpg" class="profile"></a>
-      <div layout="row" ng-show = "isVisible"  layout-align="center end" >
+      <div layout="row"  ng-show="isVisible" layout-align="center end" >
           <md-card  class="profile-card">
               <md-content>
                   <md-list>
-                      <md-list-item class="md-3-line">
+                      <md-list-item>
                           <img src="images/baby.jpg"  class="profile-card-img" alt="profile" />
                           <div class="md-list-item-text" style="text-align: justify-all" layout="column" layout-align="space-around end">
-                              <div layout="row" class="profile-name">{{userData.iss}}</div>
-                              <div layout="row" class="profile-email">{{userData.sub}}</div>
+                              <div layout="row" class="profile-name">{{userDetails.iss}}</div>
+                              <div layout="row" class="profile-email">{{userDetails.sub}}</div>
                               <div layout="row">
-                                  <a ui-sref="google.com" class="google" target="_blank" style="margin-right: 5px">Google+ Profile</a>
-                                  <span aria-hidden="true">–</span>
-                                  <a ui-sref="#"  class="google" target="_blank">Privacy</a>
+
+                                  <a href="https://policies.google.com/privacy?hl=en"  class="google" target="_blank">Privacy</a>
                               </div>
-                              <button class="profile-button">FundooApp Account</button>
+
+                              <div><button  onclick="window.location.href='https://www.google.com/'"class="profile-button" style="margin-left:58px">FundooApp Account</button></div>
 
                           </div>
                       </md-list-item>
                       <br>
                       <md-divider ></md-divider>
                       <div layout="row"  layout-xs="row">
-                          <md-button ng-click="goToLogin()" class="add-btn">Add account</md-button>
+                          <md-button ng-click="goToLogin()" class="sign-out-btn">Add account</md-button>
                           <span flex></span>
                           <md-button ng-click="goToLogin()" class="sign-out-btn" >Sign out</md-button>
                       </div>
@@ -75,3 +72,4 @@
               </md-content>
           </md-card>
       </div>
+</div>
