--- a/fundooApp/templates/dashboard.html
+++ b/fundooApp/templates/dashboard.html
@@ -42,13 +42,16 @@
                     </md-card-content>
                     <div  layout="row" >
                         <md-chips ng-if="note.reminderDate"  ng-mouseover="enableEdit(note)"  ng-mouseleave="disableEdit(note)">
-                            <md-chip class="chip"><span class="chipstyle">{{note.reminderDate | date : 'MMM dd,HH:00 a'}}</span><md-button   class="md-icon-button" ng-click="UpdateReminderDate(note)" class="chip"><md-icon><i class="material-icons">close</i></md-icon></md-button ></md-chip>
+                            <md-chip class="chip"><span class="chipstyle">{{note.reminderDate | date : 'MMM dd,HH:00 a'}}</span>
+                              <md-button   class="md-icon-button" ng-click="removeReminder(note)" class="chip"><md-icon><i class="material-icons">close</i></md-icon></md-button ></md-chip>
                         </md-chips>
-
-                        <!-- <md-chips  ng-mouseover="enableEdit(label)"  ng-mouseleave="disableEdit(label)" ng-repeat="label in note.listOfLabels">
-                            <md-chip  style="margin:0px auto;padding: 0px;"><button ng-click="sendToLabel(label,$event)" style="border:none;outline:none;border-radius: 50px;margin-left: 5px;">{{label.labelName}}</button><md-button ng-show="label.editable" class="md-icon-button" ng-click="removeLabel(label,note,$event)"  style="margin: 0px auto;padding: 0px;"><md-icon><i class="material-icons">close</i></md-icon></md-button></md-chip>
-                        </md-chips> -->
+                      </div>
+                      <div layout="row" ng-if="note.listOfLabels" layout-wrap layout-align="start space-around">
+                        <md-chips ng-repeat="label in note.listOfLabels">
+                            <md-chip  class="chip"><button ng-click="removeLabelOnNote(label,note)" style="border:none;outline:none;border-radius: 50px;margin-left: 5px;">{{label.name}}</button><md-button ng-show="label.editable" class="md-icon-button" ng-click="removeLabel(label,note,$event)"  class="chip"><md-icon><i class="material-icons">close</i></md-icon></md-button></md-chip>
+                        </md-chips>
                      </div>
+
                         <icon></icon>
                 </md-card>
       </div>
@@ -72,14 +75,17 @@
                   <md-card-content class="center">
                      <div contenteditable ng-bind-html="note.description"></div>
                   </md-card-content>
-                  <div layout="row">
-                    <md-chips ng-if="note.reminderDate"  ng-mouseover="enableEdit(note)"  ng-mouseleave="disableEdit(note)">
-                        <md-chip class="chip" ><span class="chipstyle">{{note.reminderDate | date : 'MMM dd,HH:00 a'}}</span><md-button   class="md-icon-button" ng-click="" class="chip"><md-icon><i class="material-icons">close</i></md-icon></md-button ></md-chip>
-                    </md-chips>
-                 <!-- <md-chips ng-repeat="label in note.listOfLabels">
-                     <md-chip >{{label.labelName}}</md-chip>
-                  </md-chips> -->
-             </div>
+                  <div  layout="row" >
+                      <md-chips ng-if="note.reminderDate"  ng-mouseover="enableEdit(note)"  ng-mouseleave="disableEdit(note)">
+                          <md-chip class="chip"><span class="chipstyle">{{note.reminderDate | date : 'MMM dd,HH:00 a'}}</span>
+                            <md-button   class="md-icon-button" ng-click="removeReminder(note)" class="chip"><md-icon><i class="material-icons">close</i></md-icon></md-button ></md-chip>
+                      </md-chips>
+                    </div>
+                    <div layout="row" ng-if="note.listOfLabels" layout-wrap layout-align="start space-around">
+                      <md-chips ng-repeat="label in note.listOfLabels">
+                          <md-chip  class="chip"><button ng-click="removeLabelOnNote(label,note)" style="border:none;outline:none;border-radius: 50px;margin-left: 5px;">{{label.name}}</button><md-button ng-show="label.editable" class="md-icon-button" ng-click="removeLabel(label,note,$event)"  class="chip"><md-icon><i class="material-icons">close</i></md-icon></md-button></md-chip>
+                      </md-chips>
+                   </div>
                   <div layout="row" style="height: 50px;" layout-align="space-around center">
                       <icon></icon>
                   </div>
