--- a/fundooApp/templates/dashboard.html
+++ b/fundooApp/templates/dashboard.html
@@ -76,14 +76,16 @@
                      <div contenteditable ng-bind-html="note.description"></div>
                   </md-card-content>
                   <div  layout="row" >
-                      <md-chips ng-if="note.reminderDate"  ng-mouseover="enableEdit(note)"  ng-mouseleave="disableEdit(note)">
+                      <md-chips ng-if="note.reminderDate">
                           <md-chip class="chip"><span class="chipstyle">{{note.reminderDate | date : 'MMM dd,HH:00 a'}}</span>
                             <md-button   class="md-icon-button" ng-click="removeReminder(note)" class="chip"><md-icon><i class="material-icons">close</i></md-icon></md-button ></md-chip>
                       </md-chips>
                     </div>
                     <div layout="row" ng-if="note.listOfLabels" layout-wrap layout-align="start space-around">
                       <md-chips ng-repeat="label in note.listOfLabels">
-                          <md-chip  class="chip"><button ng-click="removeLabelOnNote(label,note)" style="border:none;outline:none;border-radius: 50px;margin-left: 5px;">{{label.name}}</button><md-button ng-show="label.editable" class="md-icon-button" ng-click="removeLabel(label,note,$event)"  class="chip"><md-icon><i class="material-icons">close</i></md-icon></md-button></md-chip>
+                          <md-chip  class="chip"><button ng-click="removeLabelOnNote(label,note)" style="border:none;outline:none;border-radius: 50px;margin-left: 5px;">{{label.name}}</button>
+                            <md-button ng-show="label.editable" class="md-icon-button" ng-click="removeLabel(label,note,$event)"  class="chip">
+                            <md-icon><i class="material-icons">close</i></md-icon></md-button></md-chip>
                       </md-chips>
                    </div>
                   <div layout="row" style="height: 50px;" layout-align="space-around center">
